[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email Triage Environment for OpenEnv"
authors = [{ name="Cipher701" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "gymnasium",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"
